examples/asm/AdvancedClock-1.0.6/evosuite-warehouse/v002/README.md
# V002

Fixed the parenthesis bug and autogenerated the ASM class.

It's a particular case because we don't have the monitored functions but only controlled functions.
Hence the step function is without arguments and we don't need to set any variable.

## Problems

- Evosuite generate only 1 scenario with 1 step even though the coverage is 100% 

## How to
```shell
mvn compile
```
```shell
mvn dependency:copy-dependencies -DincludeScope=runtime
```
```shell
java -jar ../../../resources/evosuite-1.0.6.jar -setup target/classes target/dependency/commons-collections-3.2.2.jar
```
```shell
java -jar ../../../resources/evosuite-1.0.6.jar -class org.evoservice.advancedClock.AdvancedClock_ASM -criterion LINE:BRANCH -Dminimize=true -Dassertion_strategy=all
```
### log
* EvoSuite 1.0.6
* Going to generate test cases for class: org.evoservice.advancedClock.AdvancedClock_ASM
* Starting client
* Properties loaded from C:\Users\isaac\Documents\GitHub\evosuite-tutorial\examples\asm\AdvancedClock-1.0.6\evosuite-files\evosuite.properties
* Connecting to master process on port 15411
* Analyzing classpath:
  - target/classes
  - target/dependency/commons-collections-3.2.2.jar
* Finished analyzing classpath
* Generating tests for class org.evoservice.advancedClock.AdvancedClock_ASM
* Test criteria:
  - Line Coverage
  - Branch Coverage
* Setting up search algorithm for whole suite generation
* Total number of test goals:
  [Progress:>                             0%] [Cov:>                                  0%]  - Line 34
  - Branch 12
* Using seed 1725366745485
* Starting evolution
  [Progress:=>                            5%] [Cov:===================================100%]
* Search finished after 4s and 0 generations, 5696 statements, best individual has fitness: 0.0
* Minimizing test suite
* Going to analyze the coverage criteria
* Coverage analysis for criterion LINE
* Coverage of criterion LINE: 100%
* Total number of goals: 34
* Number of covered goals: 34
* Coverage analysis for criterion BRANCH
* Coverage of criterion BRANCH: 100%
* Total number of goals: 12
* Number of covered goals: 12
* Generated 1 tests with total length 2
* Resulting test suite's coverage: 100% (average coverage for all fitness functions)
* Generating assertions
* Compiling and checking tests
* Writing JUnit test case 'AdvancedClock_ASM_ESTest' to evosuite-tests
* Done!

* Computation finished

## Scenario
### test0
```
<State 0 (controlled)>
seconds = 0
minutes = 0
hours = 0
</State 0 (controlled)>

<Stato attuale>
seconds = 1
minutes = 0
hours = 0

```
#### Avalla
```
```
